# advanced-cpp

./: CMakeLists.txt
exercices/1_1/: client.cpp  server.cpp
lessons/1-1/: std_any.cpp  std_filesystem.cpp  std_map.cpp  std_optional.cpp  std_string_view.cpp  std_variant.cpp  std_vector.cpp  union.cpp
lessons/1-2/: main.cpp  math_utils.cpp  print_module.ixx
lessons/1-3/: co_counter.cpp  co_fibonacci.cpp
misc/: bytes_to_float.cpp  modules.cpp  std_string_literals.cpp
solutions/1_1/: TCPServer.cc  server.cpp
